--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/hirthik-balaji-s/" target="_blank">/in/hirthik-balaji-s</a></p>
-    <p>Email: <em>your_email@example.com</em> (add your email)</p>
+    <p>Email: <em>127156052@sastra.ac.in</em> (add your email)</p>
   </section>
 
   <footer>
