--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/hirthik-balaji-s/" target="_blank">/in/hirthik-balaji-s</a></p>
-    <p>Email: <em>127156052@sastra.ac.in</em> (add your email)</p>
+    <p>Email: <a href="mailto:127156052@sastra.ac.in">127156052@sastra.ac.in</a></p>
+
   </section>
 
   <footer>
