--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <header>
     <h1>Hirthik Balaji S</h1>
+    
+    <!-- 👇 Profile Photo added here -->
+    <img src="profile.png" alt="Profile Photo" class="profile-pic">
+
     <p>Aspiring Software Developer | CSE (AI & DS)</p>
     <nav>
       <a href="#about">About</a>
@@ -65,7 +69,6 @@
     <h2>Contact</h2>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/hirthik-balaji-s/" target="_blank">/in/hirthik-balaji-s</a></p>
     <p>Email: <a href="mailto:127156052@sastra.ac.in">127156052@sastra.ac.in</a></p>
-
   </section>
 
   <footer>
