--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 
   <header>
     <h1>Hirthik Balaji S</h1>
-    
-    <!-- 👇 Profile Photo added here -->
     <img src="profile.png" alt="Profile Photo" class="profile-pic">
-
     <p>Aspiring Software Developer | CSE (AI & DS)</p>
     <nav>
       <a href="#about">About</a>
@@ -26,7 +23,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m a 3rd-year B.Tech CSE (AI & DS) student at SASTRA University. Passionate about software development and AI, I thrive on solving complex challenges and building innovative solutions using cutting-edge technologies. I'm a curious learner, driven to contribute meaningfully to projects shaping the future of tech.</p>
+    <p>A motivated and analytical B.Tech student (CSE with AI & Data Science) passionate about solving real-world problems through data-driven decisions. Strong foundation in programming, machine learning, and research. Highly curious, with an emerging interest in financial systems, investment strategies, and market research. Eager to contribute to impactful projects through critical thinking, rigorous analysis, and collaborative teamwork.</p>
   </section>
 
   <section id="education">
@@ -41,17 +38,27 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li>Programming: C, C++, Python, Java, SQL</li>
-      <li>Data Structures & Algorithms</li>
+      <li>Programming: C++, Python, Java, SQL, HTML, CSS</li>
+      <li>Data Structures and Algorithms, Data Analysis</li>
       <li>Machine Learning (Beginner)</li>
-      <li>Problem Solving & Analytical Thinking</li>
+      <li>Analytical Thinking, Problem Solving, Communication, Team Collaboration</li>
     </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <p><strong>Machine Learning Model for Molecular Solubility Prediction</strong><br>
-      Built using Python and Scikit-learn, this model predicts molecular solubility using linear regression after preprocessing molecular property datasets.
+    <p><strong>Credit Card Fraud Detection</strong><br>
+      Built a Logistic Regression model to detect fraudulent transactions on an imbalanced dataset using scikit-learn. Applied under-sampling and preprocessing techniques.
+      [<a href="https://github.com/Hirthi-prog/Credit-Card-Fraud-Detection.git" target="_blank">GitHub</a>]
+    </p>
+
+    <p><strong>Parkinson’s Disease Detection</strong><br>
+      Developed a classification model to detect Parkinson’s Disease from voice data using Logistic Regression and feature analysis.
+      [<a href="https://github.com/Hirthi-prog/Parkinson-s-Disease-Detection.git" target="_blank">GitHub</a>]
+    </p>
+
+    <p><strong>Solubility Prediction Model</strong><br>
+      Built a regression model to predict molecular solubility based on compound properties. Used preprocessing and evaluation techniques.
       [<a href="https://github.com/Hirthi-prog/ML-proj.git" target="_blank">GitHub</a>]
     </p>
   </section>
@@ -61,7 +68,7 @@
     <ul>
       <li>1st Place – DAKSH Blog Competition on AI Evolution</li>
       <li>Flutter Development participation – DevDays '25</li>
-      <li>Content & Promotions Workshop – DevDays '25 (GitHub, blogging, branding)</li>
+      <li>Content & Promotions Workshop – DevDays '25</li>
     </ul>
   </section>
 
