--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>A motivated and analytical B.Tech student (CSE with AI & Data Science) passionate about solving real-world problems through data-driven decisions. Strong foundation in programming, machine learning, and research. Highly curious, with an emerging interest in financial systems, investment strategies, and market research. Eager to contribute to impactful projects through critical thinking, rigorous analysis, and collaborative teamwork.</p>
+    <p>A motivated and analytical B.Tech student (CSE with AI & Data Science) passionate about designing, developing, and optimizing scalable software applications. Strong foundation in programming, machine learning, SDLC principles and research. Eager to contribute to impactful projects, ensuring performance, scalability, and quality through automation and best coding practices.</p>
   </section>
 
   <section id="education">
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
